agregue la otra linea de prueba

--- a/hola.html
+++ b/hola.html
@@ -9,5 +9,6 @@
 <body>
     <div>Hola mundo, esta es mi primera web</div>
     <div>Hola, este es mi secgundo comentario</div>
+    <div>Esta es la otra prueba</div>
 </body>
 </html>
