explicacion h article p y span

--- a/Explicacion HTML y CSS/index.html
+++ b/Explicacion HTML y CSS/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hola, este es el  titulo</title>
 </head>
 <body>
-    
+    <header>
+        este es el header de navegacion
+    </header>
+    <main>
+        <section>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste omnis voluptas enim ratione nemo asperiores error perspiciatis, explicabo, laboriosam pariatur labore dolore temporibus vitae. Inventore quos eius ullam excepturi tempora?
+            </p>
+            <article>
+                <p>este es un parrafo Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis saepe placeat sit aut odio nulla numquam aliquid, dolor eaque natus, enim laboriosam illo! Voluptas, in repellat qui corrupti placeat ut?</p>
+                <p>este es otro parrafo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate rerum facilis, quibusdam repudiandae recusandae nobis veniam fugit reiciendis rem, mollitia, sint eius architecto totam ut dolorem pariatur veritatis! Alias, tempora?</p>
+                <span>este es un texto corto</span>
+            </article>
+        </section>
+        <section>seccion 2</section>
+    </main>
+    <footer>
+        este es el footer
+    </footer>
 </body>
 </html>
