nueva carpeta media con imagen perrito1

--- a/Explicacion HTML y CSS/index.html
+++ b/Explicacion HTML y CSS/index.html
@@ -20,6 +20,7 @@
                 <p>este es otro parrafo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate rerum facilis, quibusdam repudiandae recusandae nobis veniam fugit reiciendis rem, mollitia, sint eius architecto totam ut dolorem pariatur veritatis! Alias, tempora?</p>
                 <span>este es un texto corto</span>
             </article>
+            <img src="" alt="">
         </section>
         <section>seccion 2</section>
     </main>
