--- a/Explicacion HTML y CSS/index.html
+++ b/Explicacion HTML y CSS/index.html
@@ -20,7 +20,8 @@
                 <p>este es otro parrafo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate rerum facilis, quibusdam repudiandae recusandae nobis veniam fugit reiciendis rem, mollitia, sint eius architecto totam ut dolorem pariatur veritatis! Alias, tempora?</p>
                 <span>este es un texto corto</span>
             </article>
-            <img src="./media/perrito1.png" alt="">
+            <img src="./media/perrito1.png" alt="Foto de perrito1">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="imagen google">
         </section>
         <section>seccion 2</section>
     </main>
