--- a/Explicacion HTML y CSS/index.html
+++ b/Explicacion HTML y CSS/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <header>
-        este es el header de navegacion
+        <h3>Esto es una lista ordenada</h3>
+        <ol>
+            <li>elemento 1</li>
+            <li>elemento 2</li>
+            <li>elemento 3</li>
+            <li>elemento 4</li>
+        </ol>
+        <ul>
+            <li>elemento 1</li>
+            <li>elemento 2</li>
+            <li>elemento 3</li>
+            <li>elemento 4</li>   
+        </ul>
     </header>
     <main>
         <section>
