estilos primera manera

--- a/Explicacion HTML y CSS/formulario.html
+++ b/Explicacion HTML y CSS/formulario.html
@@ -5,14 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <style>
+        button{
+            background-color: red;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <a href="./index.html">Regresar</a>
     <form action="">
-        <label for="">
+        <label for="nombre">
             Ingrese su nombre
-            <input type="text" name="" placeholder="Ej. Sara">
+            <input type="text" name="nombre" placeholder="Ej. Sara">
         </label>
+        <label for="apellido">
+            Ingrese su apellido
+            <input type="text" name="apellido" placeholder="Ej. Magagnin">
+        </label>
+        <input type="number"/>
+        <input type="date"/>
+        <input type="email"/>
+        <input type="password"/>
+        <input type="checkbox"/>
+        <input type="radio"/>
+        <input type="file"/>
+        <button type="submit" >Enviar datos</button>
+        <button type="reset">Reiniciar</button>
     </form>
 </body>
 </html>
