explicacion de aplicacion de estilos css

--- a/Explicacion HTML y CSS/index.html
+++ b/Explicacion HTML y CSS/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola, este es el  titulo</title>
+    <link rel="stylesheet" href="./styles/estilos.css">
 </head>
 <body>
     <header>
@@ -28,9 +29,9 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste omnis voluptas enim ratione nemo asperiores error perspiciatis, explicabo, laboriosam pariatur labore dolore temporibus vitae. Inventore quos eius ullam excepturi tempora?
             </p>
             <article>
-                <p>este es un parrafo Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis saepe placeat sit aut odio nulla numquam aliquid, dolor eaque natus, enim laboriosam illo! Voluptas, in repellat qui corrupti placeat ut?</p>
-                <p>este es otro parrafo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate rerum facilis, quibusdam repudiandae recusandae nobis veniam fugit reiciendis rem, mollitia, sint eius architecto totam ut dolorem pariatur veritatis! Alias, tempora?</p>
-                <span>este es un texto corto</span>
+                <p class="parrafoazul">este es un parrafo Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis saepe placeat sit aut odio nulla numquam aliquid, dolor eaque natus, enim laboriosam illo! Voluptas, in repellat qui corrupti placeat ut?</p>
+                <p id="parrafo2">este es otro parrafo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate rerum facilis, quibusdam repudiandae recusandae nobis veniam fugit reiciendis rem, mollitia, sint eius architecto totam ut dolorem pariatur veritatis! Alias, tempora?</p>
+                <span class="frase">este es un texto corto</span>
             </article>
             <img src="./media/perrito1.png" alt="Foto de perrito1">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="imagen google">
