--- a/Explicacion HTML y CSS/index.html
+++ b/Explicacion HTML y CSS/index.html
@@ -36,6 +36,12 @@
             <img src="./media/perrito1.png" alt="Foto de perrito1">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="imagen google">
         </section>
+        <div class="contenedorConMargen">
+            <div>Div1</div>
+            <div>Div2</div>
+            <div>Div3</div>
+        </div>
+        
         <section>seccion 2</section>
     </main>
     <footer>
