--- a/Explicacion HTML y CSS/index.html
+++ b/Explicacion HTML y CSS/index.html
@@ -33,7 +33,7 @@
                 <p id="parrafo2">este es otro parrafo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate rerum facilis, quibusdam repudiandae recusandae nobis veniam fugit reiciendis rem, mollitia, sint eius architecto totam ut dolorem pariatur veritatis! Alias, tempora?</p>
                 <span class="frase">este es un texto corto</span>
             </article>
-            <img src="./media/perrito1.png" alt="Foto de perrito1">
+            <img src="./media/perrito1.png" alt="Foto de perrito1" class="imgPerrito">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="imagen google">
         </section>
         <div class="contenedorConMargen">
@@ -42,6 +42,16 @@
             <div>Div3</div>
         </div>
         
+        <div class="contenedorDivs" >
+            <div class="divTest">Div1</div>
+            <div class="divTest">Div2</div>
+            <div class="divTest">Div3</div>
+            <div class="divTest">Div4</div>
+            <div class="divTest">Div5</div>
+            <div class="divTest">Div6</div>
+            <div class="divTest">div7</div>
+        </div>
+
         <section>seccion 2</section>
     </main>
     <footer>
