--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <header>
-
+        <ul>
+            <li>Nuevo Post</li>
+            <li>Busqueda</li>  
+            <li>Iniciar Sesion</li>
+            <li>Registro</li>
+        </ul>
+        
     </header>
     <main>
         <section></section>
