--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./media/iconoPerro.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/estilos.css">
     <title>Razas de perros</title>
 </head>
 <body>
     <header>
-        <ul>
+        <ul class="navbar">
+            <li>Logo</li>
             <li>Nuevo Post</li>
             <li>Busqueda</li>  
             <li>Iniciar Sesion</li>
