--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <ul class="navbar">
-            <li>Logo</li>
+            <li>
+                <img class="logo" src="./media/logoPerro.png" alt="Logo Perro">
+            </li>
             <li>Nuevo Post</li>
             <li>Busqueda</li>  
             <li>Iniciar Sesion</li>
