--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -14,10 +14,14 @@
             <li>
                 <img class="logo" src="./media/logoPerro.png" alt="Logo Perro">
             </li>
-            <li>Nuevo Post</li>
+            <li>
+                <button class="mainButton">Nuevo post</button>
+            </li>
             <li>Busqueda</li>  
             <li>Iniciar Sesion</li>
-            <li>Registro</li>
+            <li>
+                <button class="mainButton">Registro</button>
+            </li>
         </ul>
         
     </header>
