--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -15,10 +15,12 @@
                 <img class="logo" src="./media/logoPerro.png" alt="Logo Perro">
             </li>
             <li>
-                <button class="mainButton">Nuevo post</button>
+                <button class="button mainButton">Nuevo post</button>
             </li>
             <li>Busqueda</li>  
-            <li>Iniciar Sesion</li>
+            <li>
+                <button class=" button secundaryButton">Login</button>
+            </li>
             <li>
                 <button class="mainButton">Registro</button>
             </li>
