--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -28,7 +28,7 @@
                 <button class=" button secundaryButton">Login</button>
             </li>
             <li>
-                <button class="mainButton">Registro</button>
+                <button class="button mainButton">Registro</button>
             </li>
         </ul>
         
