finalizacion estilos navbar

--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -21,15 +21,11 @@
             <li>
                 <div class="buscar">
                     <input placeholder="Buscar una raza" type="text" name="" id="">
-                    <i class="fas fa-search"></i>
+                    <i class="fas fa-search button iconoBusqueda"></i>
                 </div>
             </li>  
-            <li>
-                <button class=" button secundaryButton">Login</button>
-            </li>
-            <li>
-                <button class="button mainButton">Registro</button>
-            </li>
+            <li><button class=" button secundaryButton">Login</button></li>
+            <li><button class="button mainButton">Registro</button></li>
         </ul>
         
     </header>
