estilos siguiente seccion

--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -30,7 +30,23 @@
         
     </header>
     <main>
-        <section></section>
+        <section>
+            <h2>Razas de perros</h2>
+            <ul class="breedCardContainer">
+                <li class="breedCard">
+                    <div class="contenedorImagen">
+                        <img src="./media/collie.jpg" alt="border collie foto"> 
+                    </div>
+                     Border Collie
+                    </li>
+                <li class="breedCard">
+                    <div class="contenedorImagen">
+                        <img src="./media/rhodesian.jpg" alt="rhodesian foto"> 
+                     </div>
+                    Rhodesian
+                </li>
+            </ul>
+        </section>
         <section></section>
     </main>
     <footer>
