estilos imagenes, likes, comentarios y vistas

--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -33,18 +33,35 @@
         <section>
             <h2>Razas de perros</h2>
             <ul class="breedCardContainer">
+                
                 <li class="breedCard">
                     <div class="contenedorImagen">
                         <img src="./media/collie.jpg" alt="border collie foto"> 
                     </div>
-                     Border Collie
-                    </li>
+                    <span class="breedTittle">
+                    Border Collie
+                    </span>
+                    <ul class="likes">
+                        <li><i class="fas fa-heart corazonLikes"></i> 150</li>
+                        <li><i class="fas fa-comment"></i> 1.5k</li>
+                        <li><i class="fas fa-eye"></i> 120</li>
+                    </ul>
+                </li>
+
                 <li class="breedCard">
                     <div class="contenedorImagen">
                         <img src="./media/rhodesian.jpg" alt="rhodesian foto"> 
-                     </div>
+                    </div>
+                    <span class="breedTittle">
                     Rhodesian
+                    </span>
+                    <ul class="likes">
+                        <li><i class="fas fa-heart corazonLikes"></i> 450</li>
+                        <li><i class="fas fa-comment"></i> 1.1k</li>
+                        <li><i class="fas fa-eye"></i> 850</li>
+                    </ul>
                 </li>
+            
             </ul>
         </section>
         <section></section>
