estilos titulos principal

--- a/Explicacion HTML y CSS/paginaPerritos/index.html
+++ b/Explicacion HTML y CSS/paginaPerritos/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section>
-            <h2>Razas de perros</h2>
+            <h2  class="tituloPrincipal">RAZAS DE PERROS</h2>
             <ul class="breedCardContainer">
                 
                 <li class="breedCard">
